# spike-computer-vision-streamlit

./: .gitignore  .pylintrc  Makefile  README.md  capture.py  capture_with_options.py  hand_detection.py  hand_detection_tuned.py  main.py  pyproject.toml
.github/workflows/: main.yml
lib/: debug_layer.py  framerate.py  img_utils.py
service/: hand_detector.py
